crates/jfm-cli/tests/snapshots/flow_demo__flow_get_users_by_id_with_max_depth_2_renders_truncated_json.snap
---
source: crates/jfm-cli/tests/flow_demo.rs
expression: stdout
---
{
  "endpoint": {
    "verb": "GET",
    "path": "/users/{id}"
  },
  "controller": {
    "method": "com.example.demo.controller.UserController#findById(Long)",
    "file": "demo-api/demo/src/main/java/com/example/demo/controller/UserController.java",
    "line": LINE
  },
  "inputs": [
    {
      "name": "id",
      "type": "Long",
      "source": "path"
    }
  ],
  "call_sequence": [
    {
      "type": "call",
      "method": "com.example.demo.service.UserService#findById(Long)",
      "confidence": "resolved",
      "calls": [
        {
          "type": "call",
          "method": "com.example.demo.service.UserService#findUserOrThrow(Long)",
          "confidence": "resolved",
          "scope": "intra-class",
          "truncated": 3,
          "calls": []
        },
        {
          "type": "call",
          "method": "com.example.demo.service.UserService#toResponse(User)",
          "confidence": "resolved",
          "scope": "intra-class",
          "truncated": 2,
          "calls": []
        }
      ]
    }
  ],
  "unresolved": [],
  "notes": [
    "Stream, Optional, and common JDK chain operators use a small hardcoded return-shape table; this is not a general type inferencer.",
    "Optional.orElseThrow return type is flattened to Object; generic-aware unwrapping is intentionally deferred.",
    "Optional present/empty behavior is rendered structurally, but JFM does not predict which arm runs for a request.",
    "AOP, @Transactional, @ControllerAdvice, DI qualifiers, and Lombok are not modeled.",
    "Output truncated at depth 2 (see --max-depth)."
  ]
}
