crates/jfm-cli/tests/snapshots/flow_demo__flow_get_users_by_id_with_max_depth_2_renders_truncated_markdown.snap
---
source: tests/flow_demo.rs
expression: stdout
---
# GET /users/{id}

**Controller**: `com.example.demo.controller.UserController#findById(Long)`
**File**: `demo-api/demo/src/main/java/com/example/demo/controller/UserController.java:LINE`

## Call sequence

- `UserController#findById(Long)`
  - `UserService#findById(Long)` *[resolved]*
    - `UserService#findUserOrThrow(Long)` *[resolved]*
      ... (truncated, 3 more levels)
    - `UserService#toResponse(User)` *[resolved]*
      ... (truncated, 2 more levels)

## Inputs

- `id: Long` *(path variable)*

## Unresolved / external

- None

## Notes

- Stream, Optional, and common JDK chain operators use a small hardcoded return-shape table; this is not a general type inferencer.
- Optional.orElseThrow return type is flattened to Object; generic-aware unwrapping is intentionally deferred.
- Optional present/empty behavior is rendered structurally, but JFM does not predict which arm runs for a request.
- AOP, @Transactional, @ControllerAdvice, DI qualifiers, Lombok, and Bean Validation are not modeled.
- Output truncated at depth 2 (see --max-depth).
