crates/jfm-cli/tests/snapshots/flow_demo__flow_get_users_renders_expected_mermaid_flowchart.snap
---
source: crates/jfm-cli/tests/flow_demo.rs
expression: stdout
---
```mermaid
flowchart TD
    n0[["UserController#findAll()"]]
    n1[["UserService#findAll()"]]
    n0 --> n1
    n2{{"Stream#map(Function) - control flow (traversal)"}}
    n3(["UserRepository#findAll() - external (Spring Data JPA)"])
    n1 --> n3
    n3 -->|"input"| n2
    n4{{"loop stream Stream.map (0..n)"}}
    n2 --> n4
    n5["method ref: this::toResponse"]
    n4 -->|"body"| n5
    n6[["UserService#toResponse(User)"]]
    n5 --> n6
    n7[["UserResponse#<init>(Long, String, String, Integer, Boolean)"]]
    n8[["User#getId()"]]
    n6 --> n8
    n8 -->|"input"| n7
    n9[["User#getName()"]]
    n6 --> n9
    n9 -->|"input"| n7
    n10[["User#getEmail()"]]
    n6 --> n10
    n10 -->|"input"| n7
    n11[["User#getAge()"]]
    n6 --> n11
    n11 -->|"input"| n7
    n12[["User#getActive()"]]
    n6 --> n12
    n12 -->|"input"| n7
    n7 -->|"next"| n4
    %% Notes:
    %% - Stream, Optional, and common JDK chain operators use a small hardcoded return-shape table; this is not a general type inferencer.
    %% - Optional.orElseThrow return type is flattened to Object; generic-aware unwrapping is intentionally deferred.
    %% - Optional present/empty behavior is rendered structurally, but JFM does not predict which arm runs for a request.
    %% - AOP, @Transactional, @ControllerAdvice, DI qualifiers, and Lombok are not modeled.
```
