crates/jfm-cli/tests/snapshots/flow_demo__flow_post_users_renders_expected_markdown.snap
---
source: tests/flow_demo.rs
expression: stdout
---
# POST /users

**Controller**: `com.example.demo.controller.UserController#create(CreateUserRequest)`
**File**: `demo-api/demo/src/main/java/com/example/demo/controller/UserController.java:LINE`

## Call sequence

- `UserController#create(CreateUserRequest)`
  - `UserService#create(CreateUserRequest)` *[resolved]*
    - `UserService#validateEmailUniqueness(String)` *[resolved]*
      - inputs:
        - `CreateUserRequest#getEmail()` *[resolved]*
      - `Normalizers#normalizeEmail(String)` *[resolved]*
        - if email == null: *(terminates)*
      - if repository.existsByEmail(normalized): *(terminates)*
        - condition:
          - `UserRepository#existsByEmail(String)` *[external - Spring Data JPA]*
        - `BusinessException#<init>(ErrorCode)` *[resolved]*
          - `ErrorCode#getDefaultMessage()` *[resolved]*
    - if request.getAge() < 18: *(terminates)*
      - condition:
        - `CreateUserRequest#getAge()` *[resolved]*
      - `BusinessException#<init>(ErrorCode)` *(see above)*
    - `User#<init>(String, String, Integer, Boolean)` *[resolved]*
      - inputs:
        - `CreateUserRequest#getName()` *[resolved]*
        - `Normalizers#normalizeEmail(String)` *(see above)*
        - `CreateUserRequest#getAge()` *[resolved]*
    - `UserRepository#save(User)` *[external - Spring Data JPA]*
    - `UserService#toResponse(User)` *[resolved]*
      - `UserResponse#<init>(Long, String, String, Integer, Boolean)` *[resolved]*
        - inputs:
          - `User#getId()` *[resolved]*
          - `User#getName()` *[resolved]*
          - `User#getEmail()` *[resolved]*
          - `User#getAge()` *[resolved]*
          - `User#getActive()` *[resolved]*

## Inputs

- `request: CreateUserRequest` *(request body)*

## Unresolved / external

- `UserRepository#existsByEmail(String)` - `external` (Spring Data JPA)
- `UserRepository#save(User)` - `external` (Spring Data JPA)

## Notes

- Stream, Optional, and common JDK chain operators use a small hardcoded return-shape table; this is not a general type inferencer.
- Optional.orElseThrow return type is flattened to Object; generic-aware unwrapping is intentionally deferred.
- Optional present/empty behavior is rendered structurally, but JFM does not predict which arm runs for a request.
- AOP, @Transactional, @ControllerAdvice, DI qualifiers, Lombok, and Bean Validation are not modeled.
- Repeated subtrees elided after first appearance (see above).
