crates/jfm-cli/tests/snapshots/flow_demo__flow_post_users_renders_expected_mermaid.snap
---
source: crates/jfm-cli/tests/flow_demo.rs
expression: stdout
---
```mermaid
sequenceDiagram
    participant UserController
    participant UserService
    participant CreateUserRequest
    participant Normalizers
    participant UserRepository
    participant BusinessException
    participant ErrorCode
    participant User
    participant UserResponse
    UserController->>UserService: create(CreateUserRequest)
    UserService->>CreateUserRequest: getEmail()
    UserService->>UserService: validateEmailUniqueness(String)
    UserService->>Normalizers: normalizeEmail(String)
    alt email == null
    Note over Normalizers: terminates
    end
    UserService->>UserRepository: existsByEmail(String)
    Note over UserRepository: external (Spring Data JPA)
    alt repository.existsByEmail(normalized)
    UserService->>BusinessException: <init>(...)
    BusinessException->>ErrorCode: getDefaultMessage()
    end
    UserService->>CreateUserRequest: getAge()
    alt request.getAge() < 18
    UserService->>BusinessException: <init>(...)
    BusinessException->>ErrorCode: getDefaultMessage()
    end
    UserService->>CreateUserRequest: getName()
    UserService->>CreateUserRequest: getEmail()
    UserService->>Normalizers: normalizeEmail(String)
    alt email == null
    Note over Normalizers: terminates
    end
    UserService->>CreateUserRequest: getAge()
    UserService->>User: <init>(...)
    UserService->>UserRepository: save(User)
    Note over UserRepository: external (Spring Data JPA)
    UserService->>UserService: toResponse(User)
    UserService->>User: getId()
    UserService->>User: getName()
    UserService->>User: getEmail()
    UserService->>User: getAge()
    UserService->>User: getActive()
    UserService->>UserResponse: <init>(...)
    %% Notes:
    %% - Stream, Optional, and common JDK chain operators use a small hardcoded return-shape table; this is not a general type inferencer.
    %% - Optional.orElseThrow return type is flattened to Object; generic-aware unwrapping is intentionally deferred.
    %% - Optional present/empty behavior is rendered structurally, but JFM does not predict which arm runs for a request.
    %% - AOP, @Transactional, @ControllerAdvice, DI qualifiers, and Lombok are not modeled.
    %% - Return arrows are not rendered: CallNode does not yet track return types.
```
